[package]
name = "folder_compare"
version = "0.1.1"
authors = ["Tim Serowski <info@timserowski.de>"]
edition = "2018"
description="Compare two folders and get a list of changed and new files"
readme="README.md"
repository="https://github.com/tserowski/folder_compare"
homepage="https://github.com/tserowski/folder_compare"
license="Apache-2.0"
keywords=["diff", "directory"]
categories=["filesystem", "parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
regex = "1"
fxhash = "0.2"